# tries

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trie.cbp
cpp/: node.cpp  simpleTrie1.cpp  trie.cpp
include/: node.h  simpleTrie1.h  trie.h
